--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
     <head>
         <!-- do i have time/need to do anything here? -->
     </head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6H98S8FVEQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+      gtag('config', 'G-6H98S8FVEQ');
+    </script>
+    
     <body>
         
         <script type="module">
